// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly with more than 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totaling 
    $1,234,567.89
  </h1>
</div>
`;

exports[`should render ExpensesSummary correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $15.00
  </h1>
</div>
`;
